--- a/.app/_includes/partials/sidebar.njk
+++ b/.app/_includes/partials/sidebar.njk
@@ -1,6 +1,9 @@
 {% from 'macros/sidebar-tree.njk' import sidebarTree %}
 
-<aside class="stack">
+<aside
+  class="stack content-wrapper"
+  id="sidebar"
+>
   <nav
     class="links-section stack"
     aria-label="Main"
