--- a/.app/css/3-global/target.scss
+++ b/.app/css/3-global/target.scss
@@ -11,20 +11,7 @@
 		position: relative;
 	}
 
-	:target:not(main):after {
-		content: "";
-		position: absolute;
-		inset: calc(-1 * var(--space-2));
-		background-color: var(--color-primary-bg-solid);
-		border-radius: var(--rounded-md);
-		pointer-events: none;
-		animation: fade 2s forwards;
-	}
-
-	.heading-wrapper:has(:target) :target:after {
-		display: none;
-	}
-
+	:target:not(main, h2, h3):after,
 	.heading-wrapper:has(:target):after {
 		content: "";
 		position: absolute;
