--- a/.app/_includes/partials/sidebar.njk
+++ b/.app/_includes/partials/sidebar.njk
@@ -1,7 +1,7 @@
 {% from 'macros/sidebar-tree.njk' import sidebarTree %}
 
 <aside
-  class="stack content-wrapper"
+  class="content-wrapper"
   id="sidebar"
 >
   <nav
