--- a/.app/css/4-components/sidebar.scss
+++ b/.app/css/4-components/sidebar.scss
@@ -1,7 +1,10 @@
+@use "sass:map";
+@use "../1-tokens/breakpoints" as *;
 @use "../2-lib/breakpoints" as *;
 @use "../2-lib/variables" as *;
 
 .app-layout__sidebar {
+	container-type: inline-size;
 	order: 3;
 	padding-block-start: $layout-padding-block-end;
 	background-color: var(--color-surface);
@@ -100,5 +103,27 @@ hide the overflow on the body to contain the scroll to the sidebar */
 body {
 	&:has(.app-layout__sidebar[data-open="true"]) {
 		overflow: hidden;
+	}
+}
+
+.app-layout__sidebar aside {
+	display: flex;
+	flex-direction: column;
+	gap: var(--stack-gap, 1em);
+	justify-content: var(--stack-vertical-alignment, flex-start);
+	align-items: var(--stack-horizontal-alignment, flex-start);
+
+	@container (min-width: #{map-get($breakpoints, "sm")}) {
+		display: block;
+		column-count: 2;
+		column-gap: var(--space-m-l);
+
+		& > * {
+			break-inside: avoid;
+		}
+
+		& > * + * {
+			margin-block-start: var(--space-m-l);
+		}
 	}
 }
