update header styles

--- a/.app/css/4-components/app-header.scss
+++ b/.app/css/4-components/app-header.scss
@@ -12,6 +12,7 @@
 .app-header {
 	--cluster-gap: #{$header-gap};
 
+	container-type: inline-size;
 	position: sticky;
 	min-block-size: $header-height;
 	inset-block-start: 0;
