--- a/.app/css/4-components/icon-btn.scss
+++ b/.app/css/4-components/icon-btn.scss
@@ -8,7 +8,7 @@
 	padding-inline: var(--space-1);
 	border-radius: var(--rounded-full);
 	color: var(--color-primary-text);
-	transition: all 200ms ease;
+	transition: background-color 200ms ease;
 
 	// &:hover,
 	// &:focus-visible {
