--- a/.app/css/2-lib/mixins.scss
+++ b/.app/css/2-lib/mixins.scss
@@ -15,7 +15,7 @@
 
 	border-radius: var(--rounded-full);
 	color: var(--color-neutral-text);
-	transition: all 200ms ease;
+	transition: background-color 200ms ease, color 200ms ease;
 
 	&:hover {
 		background-color: var(--color-primary-bg-hover);
