--- a/.app/css/3-global/base.scss
+++ b/.app/css/3-global/base.scss
@@ -88,10 +88,9 @@ a {
 	color: var(--color-primary-text);
 	text-underline-offset: min(0.22em, 5px);
 	text-decoration-color: transparent;
-	transition: all 200ms ease;
 
 	&:hover {
-		color: var(--color-primary-text);
+		// color: var(--color-primary-text);
 		text-decoration-color: currentColor;
 	}
 
