--- a/.app/css/4-components/toc.scss
+++ b/.app/css/4-components/toc.scss
@@ -37,7 +37,7 @@ $summary-padding: var(--space-xs);
 	);
 	color: var(--color-neutral-text-contrast);
 	text-decoration: none;
-	transition: all 200ms ease;
+	transition: background-color 200ms ease, color 200ms ease;
 
 	&:hover {
 		background-color: var(--color-primary-bg);
