--- a/.app/css/4-components/search.scss
+++ b/.app/css/4-components/search.scss
@@ -33,7 +33,7 @@ $search-gutter: var(--space-4);
 	padding-inline: $search-gutter;
 
 	border: none;
-	border-radius: var(--rounded-full);
+	border-radius: var(--rounded-md);
 	background-color: var(--color-neutral-bg);
 
 	color: var(--color-neutral-text-contrast);
