--- a/.app/css/4-components/search.scss
+++ b/.app/css/4-components/search.scss
@@ -35,6 +35,7 @@ $search-gutter-wide: var(--space-4);
 	border: none;
 	border-radius: var(--rounded-md);
 	background-color: var(--color-neutral-bg);
+	box-shadow: var(--shadow-search-input);
 
 	color: var(--color-neutral-text-contrast);
 	transition: background-color 200ms ease;
@@ -102,10 +103,11 @@ $search-gutter-wide: var(--space-4);
 
 		inline-size: 400px;
 		max-block-size: calc(var(--full-vh) - (2 * $header-height));
+		border: 1px solid var(--color-neutral-border);
 		border-radius: var(--rounded-lg);
-		background-color: var(--color-surface);
+		background-color: var(--color-neutral-bg);
+		box-shadow: var(--shadow-search-popover);
 
-		box-shadow: var(--shadow-lg);
 		overflow: auto;
 		z-index: 1;
 	}
@@ -128,7 +130,7 @@ $search-gutter-wide: var(--space-4);
 
 :where([data-mode="overlay"] .search__results) {
 	> li + li {
-		border-block-start: 1px solid var(--color-primary-bg-active);
+		border-block-start: 1px solid var(--color-neutral-border);
 	}
 }
 
