add outline-offset to the visible focus ring on search result links

--- a/.app/css/4-components/search.scss
+++ b/.app/css/4-components/search.scss
@@ -185,6 +185,10 @@ $search-gutter-wide: var(--space-4);
 			color: var(--color-primary-text);
 		}
 	}
+
+	&:focus-visible {
+		outline-offset: -2px;
+	}
 }
 
 @supports (width: 8cqi) {
